tests/tooling/fixtures/native/recovery/positive/message_send_nil_immutable_global_identifier_elision.objc3
module MessageSendNilImmutableGlobalIdentifierElision;

let receiver = nil;

fn main() -> i32 {
  return [receiver ping];
}
