tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_message_receiver_extern.objc3
// Negative fixture: declaration qualifiers are invalid in message receiver expression position.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierMessageReceiverExtern;

fn main() -> i32 {
  return [extern ping];
}